# mace

./: .gitignore  README.md  cutoff.sh  dissociation_scan.py  dissociation_scan_overfit100_radialbasis.py  dissociation_scan_overfit100_repulsion.py  dissociation_scan_overfit100_repulsion_v2.py  dissociation_scan_overfit100_softcap.py  model_consistency_checks.py  neumann.sh  plot_failed_zbl_curves.py  plot_failed_zbl_curves_and_geometries.py  plot_failed_zbl_curves_and_geometries.sh  preprocess_hdf5.sh  pyproject.toml  radialbasis.sh  repulsion.sh  repulsion_2.sh  repulsion_cosine_gate.sh  repulsion_no_gate.sh  repulsion_pre.sh  repulsion_preprocessed.sh  run_plot_failed_zbl_curves.sh  scan_radial_dissociation.sh  scan_repulsion_dissociation.sh  scan_repulsion_dissociation_v2.sh  scan_softcap_dissociation.sh  softcap.sh  softcore.sh  submit_consistency_checks.sh
data/: overfit100_E0sub.E0s.json  overfit100_E0sub.extxyz  overfit100_E0sub.idx.npy  overfit100_E0zeros.json
mace/calculators/: mace.py
mace/cli/: convert_cueq_e3nn.py  convert_device.py  convert_e3nn_cueq.py  convert_e3nn_oeq.py  convert_oeq_e3nn.py  create_lammps_model.py  eval_configs.py  run_train.py  select_head.py  visualise_train.py
mace/modules/: __init__.py  blocks.py  extensions.py  loss.py  models.py  radial.py  repulsion.py
mace/tools/: arg_parser.py  checkpoint.py  model_script_utils.py  pickle_safe_mace.py  scripts_utils.py  scripts_utils.py.bak  tables_utils.py  torch_tools.py  train.py
outslurm/: mace_cutoff_3kinds_359751_0.out  mace_cutoff_3kinds_359751_1.out  mace_cutoff_3kinds_359751_2.err  mace_cutoff_3kinds_359751_2.out
scripts/: distributed_example.sbatch  export_checkpoint_to_model.py  npy_lj13_to_mace_xyz.py
