[build-system]
requires = [
    "setuptools>=61",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "mace-torch"
dynamic = ["version"]
description = "MACE - Fast and accurate machine learning interatomic potentials with higher order equivariant message passing."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "torch>=1.12",
    "e3nn==0.4.4",
    "numpy",
    "opt_einsum",
    "ase",
    "torch-ema",
    "prettytable",
    "matscipy",
    "h5py",
    "torchmetrics",
    "python-hostlist",
    "configargparse",
    "GitPython",
    "pyYAML",
    "tqdm",
    "lmdb",
    "orjson",
    "matplotlib",
    "pandas",
    "wandb",
]

[project.urls]
Homepage = "https://github.com/ACEsuit/mace"

[project.scripts]
mace_active_learning_md = "mace.cli.active_learning_md:main"
mace_create_lammps_model = "mace.cli.create_lammps_model:main"
mace_eval_configs = "mace.cli.eval_configs:main"
mace_plot_train = "mace.cli.plot_train:main"
mace_run_train = "mace.cli.run_train:main"
mace_prepare_data = "mace.cli.preprocess_data:main"
mace_finetuning_select = "mace.cli.fine_tuning_select:main"
mace_convert_device = "mace.cli.convert_device:main"
mace_select_head = "mace.cli.select_head:main"
mace_e3nn_cueq = "mace.cli.convert_e3nn_cueq:main"
mace_cueq_to_e3nn = "mace.cli.convert_cueq_e3nn:main"

[project.optional-dependencies]
fpsample = ["fpsample"]
dev = [
    "black",
    "isort",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-benchmark",
    "pylint",
]
schedulefree = ["schedulefree"]

[tool.setuptools.dynamic]
version = { attr = "mace.__version__" }

[tool.setuptools.packages.find]
include = ["mace*"]

# Make isort compatible with black
[tool.isort]
profile = "black"

# Pylint
[tool.pylint.'MESSAGES CONTROL']
disable = [
    "line-too-long",
    "no-member",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-locals",
    "too-many-return-statements",
    "not-callable",
    "logging-fstring-interpolation",
    "logging-not-lazy",
    "logging-too-many-args",
    "invalid-name",
    "too-few-public-methods",
    "too-many-instance-attributes",
    "too-many-statements",
    "too-many-branches",
    "import-outside-toplevel",
    "cell-var-from-loop",
    "duplicate-code",
    "use-dict-literal",
]

[tool.pylint.MASTER]
ignore-paths = [
    "^mace/tools/torch_geometric/.*$",
    "^mace/tools/scatter.py$",
]

[tool.pylint.FORMAT]
max-module-lines = 2000
